// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-control-label css-1iwo04m"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-szzvvn"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;

exports[`props should render htmlFor 1`] = `
<div
  class="wp-components-control-label css-1iwo04m"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-szzvvn"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="Field"
  >
    Label
  </label>
</div>
`;

exports[`props should render no truncate 1`] = `
<div
  class="wp-components-control-label css-1iwo04m"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-view wp-components-text wp-components-control-label css-1jk3501"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-control-label css-1vdk2hh"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-szzvvn"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;
